platform/config-sync/cluster/constraints.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: all-must-have-owner
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
    excludedNamespaces:
      - kube-system
      - kube-public
      - gke-connect
      - config-management-system
      - config-management-monitoring
      - gatekeeper-system
      - resource-group-system
      - asm-system
      - istio-system
  parameters:
    labels:
      - key: "owner"
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockNodePort
metadata:
  name: no-node-port-services
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
    namespaces:
      - "nexus-app"
